# CL_000_OP

./: .gitignore  Cargo.toml  DATA_GOVERNANCE.md  README.md  THIRD_PARTY_NOTICES.md  rust-toolchain.toml
apps/aw_omni_daemon/: Cargo.toml
apps/aw_omni_daemon/src/: main.rs
apps/aw_omni_mcp/: Cargo.toml
apps/aw_omni_mcp/src/: main.rs
config/: local.win.toml  local.wsl.toml
crates/aw_client/: Cargo.toml
crates/aw_client/src/: lib.rs
crates/nowframe_core/: Cargo.toml
crates/nowframe_core/src/: lib.rs
crates/omni_client/: Cargo.toml
crates/omni_client/src/: lib.rs
crates/trigger_engine/: Cargo.toml
crates/trigger_engine/src/: lib.rs
docs/: mcp_capability_matrix.md  protected_constraints.txt  requirements.omni.install.txt  requirements.omni.raw.txt  step3_omniparser_risk_report.md  step4_install_batches_report.md  step5_install_batches_report.md  step6_local_patches.md  step7_untitled_install_report.md  step7_untitled_protected_constraints.txt
docs/patches/: OMNIPARSER_LOCAL_PATCHES.md  omniparser-local.patch
docs/protocols/: AW_PROTOCOL.md  MCP_TOOL_CONTRACT.md  OMNIPARSER_SIDECAR_PROTOCOL.md
scripts/: build_protected_constraints.py  build_untitled_constraints.py  check_disk_guard_win.ps1  check_import_matrix_win.ps1  check_omni_preflight_win.ps1  check_real_sidecar_prereq_win.ps1  download_omniparser_weights_win.ps1  install_aliyun39_guarded_win.ps1  install_untitled_guarded_win.ps1  protect_snapshot_win.ps1  run_all_wsl.sh  run_daemon_win.cmd  run_daemon_win.ps1  run_first_real_parse_win.ps1  run_mcp_win.cmd  run_mcp_win.ps1  run_sidecar_entry_win.ps1  test_screen_bundle_win.ps1
sidecar/: omni_sidecar_entry.py  omni_sidecar_mock.py
