[package]
name = "aw_omni_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
aw_client = { path = "../../crates/aw_client" }
omni_client = { path = "../../crates/omni_client" }
nowframe_core = { path = "../../crates/nowframe_core" }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
imageproc = { version = "0.25.0", default-features = false }

[target.'cfg(windows)'.dependencies]
xcap = { version = "0.8.2", default-features = false, features = ["image"] }
